Fixed overflow with header and changed header content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ body {
     text-align: justify;
     font-size: 20px;
     color: #022D41;
+    margin: 0 0;
+    padding: 0 0;
 }
 
 .titleheading {
@@ -131,13 +133,6 @@ body {
 
 /******************************Blockdividers******************************/
 
-.jumbo-block-divider {
-    width: 90%;
-    height: 2px;
-    border: 0;
-    background-color: #38405F;
-}
-
 /**code below for hr fade styling taken from https://codepen.io/ibrahimjabbari/pen/ozinB**/
 
 .block-divider {
@@ -156,20 +151,17 @@ body {
     margin-bottom: 50px;
 }
 
-.block-divider-white {
-    background-image: -webkit-linear-gradient(left, #38405F, #fafafa, #38405F);
-    background-image: -moz-linear-gradient(left, #38405F, #fafafa, #38405F);
-    background-image: -ms-linear-gradient(left, #38405F, #fafafa, #38405F);
-    background-image: -o-linear-gradient(left, #38405F, #fafafa, #38405F);
-}
-
 /******************************HEADER&NAVBAR*******************************/
 
 header {
     position: fixed;
     top: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
     z-index: 1;
+    height: 110px;
+    width: 100vw;
+    display: flex;
 }
 
 
@@ -180,7 +172,6 @@ main {
 .navbar-brand > img {
     max-height: 100px;
     max-width: 100px;
-    padding: 10px;
 }
 
 .container-fluid {
@@ -188,7 +179,7 @@ main {
 }
 
 .navbar {
-    padding:0;
+    width:100%;
 }
 
 .nav-item {
@@ -234,119 +225,12 @@ main {
     padding: 5px;
 }
 
-/***********************************HERO IMAGE********************************/
-
-.heroimage {
-    min-height: 500px;
-
-    background: url("../images/physiobanner.jpg") no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
-}
-
-.jumbotron {
-    background-color: rgba(120,161,187,0.6);
-    border-radius: .5rem;
-    width: 70%;
-    margin: auto;
-}
-
 /***********************************Information Section********************************/
 
 .container-information {
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
-}
-
-/***********************************About Content********************************/
-
-.container-about {
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.headshot {
-    display:block;
-    margin: auto;
-    width:300px;
-    height:300px;
-    object-fit:cover;
-    border-radius: 50%;
-}
-
-/***********************************Services Content********************************/
-
-.container-services {
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-.btn-services {
-    margin-top: 0;
-    width: 100%;
-    border: 0px;
-    color: #252a3f;
-    text-align: left;
-}
-
-.btn-services:hover {
-    background-color: rgba(120,161,187,0.75);
-    font-weight: 700;
-    color: #252a3f;
-    text-decoration: none;
-}
-
-.card-header {
-    background-color: rgba(120,161,187,0.25);
-    padding: 0;
-}
-
-.card {
-    width: 95%;
-    margin: auto;
-}
-
-/**********************************Contact Page Content Styling********************************/
-
-.container-contact {
-    padding-top: 40px;
-    padding-bottom: 30px;
-}
-
-
-.contactform {
-    background-color: rgba(120,161,187,0.5);
-    padding: 20px;
-    border-radius: 10px;
-}
-
-/***********************************Location Page Content Styling********************************/
-
-.container-location {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
-}
-
-#map {
-    width: 100%;
-    height: 600px;
-}
-
-.address {
-    background-color: rgba(120,161,187,0.5);
-    border-radius: 10%;
-    padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 /***********************************FOOTER********************************/
@@ -376,6 +260,13 @@ main {
 
 /***********************************Mobile Content Adjustment********************************/
 
+@media (max-width: 1199.98px) {
+    .nav-item{
+        border-bottom: solid 1px white;
+        width: 100%;
+    }
+}
+
 /**Medium & below**/
 
 @media (max-width: 991.98px) {
@@ -388,22 +279,11 @@ body {
     font-size: 2.5rem;
 }
 
-.jumbotron {
-    width: 100%;
-    margin: auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
 .nav-item {
     width: 100%;
     margin: auto;
 }
 
-.headshot {
-    width:280px;
-    height:280px;
-}
 
 }
 
@@ -452,7 +332,6 @@ body {
 main {
     margin-top: 55px;
 }
-
 
 .largeheading {
     font-size: 25px;
